k8s-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camara-ia-service
  namespace: camaras-ia
spec:
  selector: { app: camara-ia }
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
